grafana field and matric grafana function fixed
